--- a/wilkinza-portfolio/.gitignore
+++ b/wilkinza-portfolio/.gitignore
@@ -6,3 +6,6 @@ frontend/node_modules/
 
 # Ignore node_modules folder in the backend directory
 backend/node_modules/
+
+# Ignore environment variables file
+.env
