--- a/wilkinza-portfolio/backend/package.json
+++ b/wilkinza-portfolio/backend/package.json
@@ -2,7 +2,7 @@
   "name": "grocery-tracker-backend",
   "version": "2023",
   "description": "An app that tracks how much a person purchases in groceries vs their expected consumption.",
-  "main": "grocery-tracker-controller.mjs", 
+  "main": "grocery-tracker-controller.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon grocery-tracker-controller.mjs"
@@ -10,10 +10,11 @@
   "author": "Zachary Z. Wilkins-Olson",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "mongodb": "^6.7.0",
     "mongoose": "^6.9.1",
-    "rest": "^2.0.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "rest": "^2.0.0"
   }
 }
