--- a/wilkinza-portfolio/backend/package.json
+++ b/wilkinza-portfolio/backend/package.json
@@ -10,11 +10,14 @@
   "author": "Zachary Z. Wilkins-Olson",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongodb": "^6.7.0",
     "mongoose": "^6.9.1",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.0.1",
     "rest": "^2.0.0"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
