--- a/wilkinza-portfolio/frontend/package.json
+++ b/wilkinza-portfolio/frontend/package.json
@@ -10,12 +10,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "nodemailer": "^6.9.14",
     "nodemailer-react": "^1.0.2",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-image-gallery": "^1.2.11",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
