--- a/.github/workflows/main_zzwobackend.yml
+++ b/.github/workflows/main_zzwobackend.yml
@@ -21,15 +21,12 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: Navigate to backend folder
-        run: cd backend
-
       - name: npm install, build, and test
         run: |
+          cd backend
           npm install
           npm run build --if-present
           npm run test --if-present
-        working-directory: ./backend
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -65,4 +62,4 @@ jobs:
         with:
           app-name: 'ZZWObackend'
           slot-name: 'Production'
-          package: ./backend
+          package: .
