Update package.json file

--- a/wilkinza-portfolio/backend/package.json
+++ b/wilkinza-portfolio/backend/package.json
@@ -19,5 +19,5 @@
     "nodemon": "^3.0.1",
     "rest": "^2.0.0"
   },
-  "proxy": "http://localhost:8000"
+  "proxy": "https://portfoliorepobackend.onrender.com/"
 }
